CH-03 - Partial Views Added & BT Added.

--- a/Freelancer/Views/HomePage.cshtml
+++ b/Freelancer/Views/HomePage.cshtml
@@ -2,72 +2,11 @@
 @inherits Umbraco.Cms.Web.Common.Views.UmbracoViewPage<ContentModels.HomePage>
 @using ContentModels = Umbraco.Cms.Web.Common.PublishedModels;
 @{
-  Layout = null;
+  Layout = "Main.cshtml";
 }
 
-<html>
 
-<head>
-  <style>
-    :root {
-      --minh: 98vh;
-      --color1:
-        @Model.Color1
-      ;
-      --color2:
-        @Model.Color2
-      ;
-    }
-
-    html {
-      font-size: 60px;
-    }
-
-
-    .curtain {
-      /** create the "split" background **/
-      background-image: linear-gradient(to bottom, var(--color2) 50%, var(--color1) 50%);
-    }
-
-    /** add extra space to the bottom (need this for the "sticky" effect) **/
-    .curtain::after {
-      content: "";
-      display: block;
-      min-height: var(--minh);
-    }
-
-
-
-    .invert {
-      /** make the content sticky **/
-      position: sticky;
-      top: 20px;
-
-      /** blend the content with the contrast effect **/
-      mix-blend-mode: difference;
-
-      /** center the content **/
-      display: flex;
-      align-items: center;
-      justify-content: center;
-
-      /** set the minimum height of the section **/
-      min-height: var(--minh);
-    }
-
-    h2 {
-      /** set the color of the text **/
-      color: var(--color1);
-    }
-  </style>
-</head>
-
-<body>
-  <div class="curtain">
-    <div class="invert">
-      <h2>@Model.Title</h2>
-    </div>
-  </div>
-</body>
-
-</html>
+@await Html.PartialAsync("Partials/header")
+@await Html.PartialAsync("portfolio")
+@await Html.PartialAsync("about")
+@await Html.PartialAsync("contactus")
